Fix footer z-index bug

--- a/webclient/src/light.css
+++ b/webclient/src/light.css
@@ -152,7 +152,7 @@ body {
 
 /* grid top */
 .footer .container {
-	z-index: 99;
+	z-index: 2;
 	grid-row: 1/2;
 	grid-column: 1/2;
 	padding-top: 3rem;
